Closed Bug 1897781 Opened 2 months ago Closed 1 month ago

Changing sort in in threaded unified folder does not set secondary sort

Categories

(Thunderbird :: Folder and Message Lists, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 wontfix, thunderbird127 verified)

VERIFIED FIXED
128 Branch
Tracking Status
thunderbird_esr115 --- wontfix
thunderbird127 --- verified

People

(Reporter: welpy-cw, Assigned: welpy-cw)

References

Details

Attachments

(2 files)

Steps to reproduce:

  1. Create a new saved search covering at least two folders. View should be threaded and sorted by date, all threads collapsed.
  2. Sort by subject.
  3. Sort by correspondents.
  4. Sort by unthreaded.
  5. Sort by subject.
  6. Sort by correspondents.
  7. Sort by threaded.

Expected result:
After step 3, messages with the same correspondent should be sorted by subject.

Actual result:
After step 3, messages with the same correspondent are sorted by order received, which is the default secondary sort type. After step 7 those messages are sorted by subject, but changing the sort again doesn't set the secondary sort.

Assignee: nobody → h.w.forms
Attachment #9402767 - Attachment description: WIP: Bug 1897781 - Set secondary sort in threaded cross-folder views. → Bug 1897781 - Set secondary sort in threaded cross-folder views. r=john.bieling
Status: NEW → ASSIGNED

Sorry for the delay, will look at it today!

Hi @welpy-cw Thanks a lot for reporting this and for the patch.

I followed your steps to reproduce on Daily and on my local but wasn't able to recreate the problem - unless I use 115 where I can still experience the issue, given your clear instructions. I spoke to @john.bieling about this and we wondered if you are able to recreate the problem using Daily?

Before we do anything with the patch and test (thanks!), we just wanted to make sure that we haven't missed something in our testing.

Could you perhaps test Daily to see if you have the same problem? We would like to ensure that this issue hasn't already been addressed.

Many thanks

Flags: needinfo?(h.w.forms)

Hi Toby,

that's really strange.

(In reply to Toby Pilling from comment #3)

I followed your steps to reproduce on Daily and on my local but wasn't able to recreate the problem - unless I use 115 where I can still experience the issue, given your clear instructions. I spoke to @john.bieling about this and we wondered if you are able to recreate the problem using Daily?

Before we do anything with the patch and test (thanks!), we just wanted to make sure that we haven't missed something in our testing.

Could you perhaps test Daily to see if you have the same problem? We would like to ensure that this issue hasn't already been addressed.

I just performed the STR again with the latest local Daily build as well as with 115.11. With both versions I get exactly the same result as described in comment 0.

Flags: needinfo?(h.w.forms) → needinfo?(toby)

Hi Hartmut,
I tested this with John earlier today and the Daily seems to work ok on Windows without this patch. Could you please let us know what OS are you using and if have any add-ons or tweaks that might help us reproduce?
Cheers

Flags: needinfo?(toby) → needinfo?(h.w.forms)

This shows the behavior in a newly created saved search covering two folders. I added the column "Order received", since this is the default secondary sort after creating a cross-folder view.
Clicking on "Subject" followed by clicking on "Correspondents" should set the secondary sort to "Subject", but messages with the same correspondent are still sorted by "Order received".

Flags: needinfo?(h.w.forms) → needinfo?(toby)

Thanks Hartmut, most helpful!
I was able to reproduce the issue when using a saved search with at least two folders inside Local Folders - it works fine when using a saved search on account folders.
I have also verified that your patch fixes the problem.
All the best

Flags: needinfo?(toby)
See Also: → 1899664
Target Milestone: --- → 128 Branch

Pushed by solange@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/3d368bef1772
Set secondary sort in threaded cross-folder views. r=john.bieling,leftmostcat

Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Duplicate of this bug: 746149

Comment on attachment 9402767 [details]
Bug 1897781 - Set secondary sort in threaded cross-folder views. r=john.bieling

[Approval Request Comment]
Approved for beta

Attachment #9402767 - Flags: approval-comm-beta+

Hello,

Managed to reproduce this issue with the affected build from 2024-05-20 (20240520103238) using Windows 11.

Confirming this issue as verified fixed on 127.0b5(20240603175044) using macOS 14, Windows 11 and Ubuntu 22.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: