Bug 1897781 - Set secondary sort in threaded cross-folder views. r=john.bieling,leftmostcat

Differential Revision: https://phabricator.services.mozilla.com/D210934

--HG--
extra : moz-landing-system : lando